# PyRef2

./: .gitignore  AGENTS.md  README.md  pyproject.toml
examples/report_showcase/: README.md
examples/report_showcase/revision-A/pkg/: models.py  module_changes.py
examples/report_showcase/revision-B/pkg/: calculations.py  domain.py  module_changes.py  settings.py
src/pyref2/: __init__.py  exceptions.py  service.py
src/pyref2/cli/: commands.py
src/pyref2/core/: __init__.py  ast_analysis.py  diff_engine.py
src/pyref2/core/detectors/: __init__.py  base.py  method_detectors.py
src/pyref2/models/: __init__.py  code_elements.py  refactorings.py
src/pyref2/repository/: __init__.py  git_history.py
tests/: test_ast_diff_detectors.py  test_cli.py  test_git_revisions.py  test_output_formats.py  test_source_trees.py
tests/source_trees/: README.md
tests/source_trees/class_move_with_method_rename/revision-A/pkg/: models.py
tests/source_trees/class_move_with_method_rename/revision-B/pkg/: domain.py
tests/source_trees/move_class_across_modules/revision-B/pkg/: domain.py
tests/source_trees/move_method_across_modules/revision-A/pkg/: alpha.py
tests/source_trees/move_method_across_modules/revision-B/pkg/: alpha.py  beta.py
