[project]
name = "pyref2"
version = "0.1.0"
description = "Detect Python refactorings across Git revisions with functional-change reporting"
readme = "README.md"
authors = [
    { name = "Martin Schroeder", email = "mschroeder@geomar.de" }
]
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.43",
]

[project.scripts]
pyref2 = "pyref2:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["^tests/source_trees/"]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
